--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "aima"]
-	path = aima
+[submodule "aima-python"]
+	path = aima-python
 	url = https://github.com/aimacode/aima-python
   ignore = dirty
